--- a/icti2023/informe2024.html
+++ b/icti2023/informe2024.html
@@ -1501,7 +1501,7 @@ Universidad Michoacana de San Nicolás de Hidalgo</div></h4>
 <div style="page-break-after: always;"></div>
 <div id="datos-generales-del-proyecto" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> Datos generales del proyecto</h1>
-<p><strong>Propuesta del proyecto</strong>: <a href="https://www.oscardelatorretorres.com/icti2023">Presione esta liga para consultar la propuesta del proyecto</a></p>
+<p><strong>Propuesta del proyecto</strong>: <a href="https://oscarvdelatorretorres.github.io/proyectosInvestigacion/icti2023/">Presione esta liga para consultar la propuesta del proyecto</a></p>
 <p><strong>Título del proyecto:</strong> Algoritmo para la cobertura del precio nacional del aguacate Hass producido
 en el Estado de Michoacán por medio coberturas agrícolas de las Bolsas de mercancías de Chicago y Nueva York provistas por SEGALMEX</p>
 <p><strong>Folio ICTI:</strong> ICTI-PICIR23-086</p>
